--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,3 @@
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_cG9zaXRpdmUtbG9uZ2hvcm4tNzEuY2xlcmsuYWNjb3VudHMuZGV2JA
-VITE_BACKEND_URL = 'http://localhost:4000'
-VITE_RAZORPAY_KEY_ID = '------ Razorpay Key Id here ------'
+VITE_BACKEND_URL = 'https://ameesha662000-pixi-bot-ai-bg-remove.vercel.app'
+VITE_RAZORPAY_KEY_ID = 'rzp_test_1PvCrBpxXFtbFt'
